--- a/mcu/optimization_main_app/optimization_main_app.ioc
+++ b/mcu/optimization_main_app/optimization_main_app.ioc
@@ -9,12 +9,12 @@ ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.master=1
-AES.Data\ encryption\ types\ list=AESCMAC
-AES.DataType=CRYP_DATATYPE_32B
-AES.GCMCMACPhase=CRYP_GCMCMAC_FINAL_PHASE
-AES.IPParameters=DataType,Data encryption types list,KeyWriteFlag,OperatingMode,GCMCMACPhase
-AES.KeyWriteFlag=CRYP_KEY_WRITE_DISABLE
-AES.OperatingMode=CRYP_ALGOMODE_KEYDERIVATION
+AES.Data\ encryption\ types\ list=AESCBC
+AES.DataType=CRYP_DATATYPE_8B
+AES.IPParameters=DataType,Data encryption types list,KeyWriteFlag,OperatingMode,pKey
+AES.KeyWriteFlag=CRYP_KEY_WRITE_ENABLE
+AES.OperatingMode=CRYP_ALGOMODE_ENCRYPT
+AES.pKey=00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
