--- a/mcu/reoptimization_main_app/reoptimization_main_app.ioc
+++ b/mcu/reoptimization_main_app/reoptimization_main_app.ioc
@@ -1,14 +1,23 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_5
-ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV10
+ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV2
 ADC1.DMAContinuousRequests=ENABLE
 ADC1.ExternalTrigConv=ADC_EXTERNALTRIG_T3_TRGO
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,ExternalTrigConv,DMAContinuousRequests,master
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,ExternalTrigConv,DMAContinuousRequests,master,ClockPrescaler
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.master=1
+ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_15
+ADC2.ClockPrescaler=ADC_CLOCK_ASYNC_DIV2
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,ClockPrescaler,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,Resolution,LowPowerAutoWait
+ADC2.LowPowerAutoWait=ENABLE
+ADC2.NbrOfConversionFlag=1
+ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.Rank-0\#ChannelRegularConversion=1
+ADC2.Resolution=ADC_RESOLUTION_6B
+ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 AES.Data\ encryption\ types\ list=AESCBC
 AES.DataType=CRYP_DATATYPE_8B
 AES.IPParameters=DataType,Data encryption types list,KeyWriteFlag,OperatingMode,pKey
@@ -50,48 +59,50 @@ LPUART1.WordLength=UART_WORDLENGTH_8B
 Mcu.CPN=STM32L4A6ZGT6
 Mcu.Family=STM32L4
 Mcu.IP0=ADC1
-Mcu.IP1=AES
-Mcu.IP2=DMA
-Mcu.IP3=LPUART1
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SPI1
-Mcu.IP7=SYS
-Mcu.IP8=TIM3
-Mcu.IPNb=9
+Mcu.IP1=ADC2
+Mcu.IP2=AES
+Mcu.IP3=DMA
+Mcu.IP4=LPUART1
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SPI1
+Mcu.IP8=SYS
+Mcu.IP9=TIM3
+Mcu.IPNb=10
 Mcu.Name=STM32L4A6ZGTx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin10=PE11
-Mcu.Pin11=PE13
-Mcu.Pin12=PB14
-Mcu.Pin13=PG5
-Mcu.Pin14=PG6
-Mcu.Pin15=PG7
-Mcu.Pin16=PG8
-Mcu.Pin17=PA8
-Mcu.Pin18=PA9
-Mcu.Pin19=PA10
+Mcu.Pin10=PF13
+Mcu.Pin11=PE11
+Mcu.Pin12=PE13
+Mcu.Pin13=PB14
+Mcu.Pin14=PG5
+Mcu.Pin15=PG6
+Mcu.Pin16=PG7
+Mcu.Pin17=PG8
+Mcu.Pin18=PA8
+Mcu.Pin19=PA9
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
-Mcu.Pin20=PA11
-Mcu.Pin21=PA12
-Mcu.Pin22=PA13 (JTMS/SWDIO)
-Mcu.Pin23=PA14 (JTCK/SWCLK)
-Mcu.Pin24=PB3 (JTDO/TRACESWO)
-Mcu.Pin25=PB7
-Mcu.Pin26=VP_AES_VS_AES
-Mcu.Pin27=VP_SYS_VS_Systick
-Mcu.Pin28=VP_SYS_VS_LPOM
-Mcu.Pin29=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin20=PA10
+Mcu.Pin21=PA11
+Mcu.Pin22=PA12
+Mcu.Pin23=PA13 (JTMS/SWDIO)
+Mcu.Pin24=PA14 (JTCK/SWCLK)
+Mcu.Pin25=PB3 (JTDO/TRACESWO)
+Mcu.Pin26=PB7
+Mcu.Pin27=VP_AES_VS_AES
+Mcu.Pin28=VP_SYS_VS_Systick
+Mcu.Pin29=VP_SYS_VS_LPOM
 Mcu.Pin3=PH1-OSC_OUT (PH1)
+Mcu.Pin30=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin4=PC0
 Mcu.Pin5=PA0
 Mcu.Pin6=PA3
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
-Mcu.Pin9=PF13
-Mcu.PinsNb=30
+Mcu.Pin9=PB0
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L4A6ZGTx
@@ -151,6 +162,8 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=USB_VBUS
 PA9.Locked=true
 PA9.Signal=USB_OTG_FS_VBUS
+PB0.Locked=true
+PB0.Signal=ADCx_IN15
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3 [Red]
 PB14.Locked=true
@@ -180,6 +193,44 @@ PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (PC15).Locked=true
 PC15-OSC32_OUT\ (PC15).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
+PCC.Checker=true
+PCC.Line=STM32L4x6
+PCC.MCU=STM32L4A6ZGTx
+PCC.PartNumber=STM32L4A6ZGTx
+PCC.Seq0=2
+PCC.Seq0.Step0.Average_Current=521 \u00B5A
+PCC.Seq0.Step0.CPU_Frequency=2 MHz
+PCC.Seq0.Step0.Category=Measurements
+PCC.Seq0.Step0.DMIPS=0.0
+PCC.Seq0.Step0.Duration=0.1 ms
+PCC.Seq0.Step0.Frequency=2 MHz
+PCC.Seq0.Step0.Memory=FLASH
+PCC.Seq0.Step0.Mode=LOWPOWER_RUN
+PCC.Seq0.Step0.Oscillator=MSI Flash-ON
+PCC.Seq0.Step0.Peripherals=ADC1\:fs_10_ksps ADC2\:fs_10_ksps AES AHB_APB1_Bridge AHB_APB2_Bridge GPIOA GPIOB GPIOC GPIOE GPIOF GPIOG GPIOH LPUART1 SPI1 SYS-VREFBUF/COMP1\:COMP_High_Speed-Square_VREFBUF_OFF TIM3
+PCC.Seq0.Step0.TaMax=104.97
+PCC.Seq0.Step0.User's_Consumption=0 mA
+PCC.Seq0.Step0.Vcore=NoRange
+PCC.Seq0.Step0.Vdd=1.8
+PCC.Seq0.Step0.Voltage_Source=Battery
+PCC.Seq0.Step1.Average_Current=2.57 \u00B5A
+PCC.Seq0.Step1.CPU_Frequency=0 Hz
+PCC.Seq0.Step1.Category=In DS Table
+PCC.Seq0.Step1.DMIPS=0.0
+PCC.Seq0.Step1.Duration=0.9 ms
+PCC.Seq0.Step1.Frequency=0 Hz
+PCC.Seq0.Step1.Memory=n/a
+PCC.Seq0.Step1.Mode=STOP2
+PCC.Seq0.Step1.Oscillator=ALL CLOCKS OFF
+PCC.Seq0.Step1.Peripherals=
+PCC.Seq0.Step1.TaMax=105
+PCC.Seq0.Step1.User's_Consumption=0 mA
+PCC.Seq0.Step1.Vcore=NoRange
+PCC.Seq0.Step1.Vdd=1.8
+PCC.Seq0.Step1.Voltage_Source=Battery
+PCC.Series=STM32L4
+PCC.Temperature=25
+PCC.Vdd=1.8
 PE11.GPIOParameters=PinState,GPIO_Label
 PE11.GPIO_Label=RADIO_EEPROM_CSN
 PE11.Locked=true
@@ -244,7 +295,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_LPUART1_UART_Init-LPUART1-true-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_AES_Init-AES-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_LPUART1_UART_Init-LPUART1-true-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_AES_Init-AES-false-HAL-true,9-MX_ADC2_Init-ADC2-false-HAL-true
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_SYSCLK
 RCC.ADCFreq_Value=2000000
 RCC.AHBFreq_Value=2000000
@@ -303,6 +354,8 @@ RCC.VCOOutputFreq_Value=48000000
 RCC.VCOSAI1OutputFreq_Value=48000000
 RCC.VCOSAI2OutputFreq_Value=16000000
 RCC.VDD_VALUE=1.8
+SH.ADCx_IN15.0=ADC2_IN15,IN15-Single-Ended
+SH.ADCx_IN15.ConfNb=1
 SH.ADCx_IN5.0=ADC1_IN5,IN5-Single-Ended
 SH.ADCx_IN5.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
@@ -310,7 +363,7 @@ SH.GPXTI13.ConfNb=1
 SH.GPXTI3.0=GPIO_EXTI3
 SH.GPXTI3.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI1.CalculateBaudRate=12.0 MBits/s
+SPI1.CalculateBaudRate=500.0 KBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
